dlkhunter/src/dlkhunter.h

void DLKHunter_stopEventEpoch(char*,int);
void DLKHunter_startEventEpoch();
void DLKHunter_init(char*, int);
void DLKHunter_finish();
void DLKHunter_displayReport(int);